<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/main_margin"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_city_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_city_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/choose_city_hint_text"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/cb_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/title_humidity" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/cb_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/title_wind" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/cb_probability_of_precipitation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/title_probability_of_precipitation" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/bt_show_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:enabled="false"
        android:text="@string/show_weather" />

</LinearLayout>