<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/main_margin">

    <TextView
        android:id="@+id/tv_city_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TitleTextAppearance"/>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_city_value"
        style="@style/SubTitleTextAppearance"/>

    <ImageView
        android:id="@+id/iv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_date"
        android:layout_marginTop="@dimen/main_margin"
        android:layout_marginBottom="@dimen/main_marginBottom"
        app:srcCompat="@drawable/weather_sunny"
        android:contentDescription="@string/weather_status_content_description"/>

    <LinearLayout
        android:id="@+id/ll_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/iv_status">

        <TextView
            android:id="@+id/tv_temperature_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_temperature"
            style="@style/CommonTextStyle"/>

        <TextView
            android:id="@+id/tv_temperature_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CommonTextStyle"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ll_temperature">

        <TextView
            android:id="@+id/tv_humidity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_humidity"
            style="@style/CommonTextStyle"/>

        <TextView
            android:id="@+id/tv_humidity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CommonTextStyle"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ll_humidity">

        <TextView
            android:id="@+id/tv_wind_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_wind"
            style="@style/CommonTextStyle"/>

        <TextView
            android:id="@+id/tv_wind_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CommonTextStyle"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_probability_of_precipitation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ll_wind">

        <TextView
            android:id="@+id/tv_probability_of_precipitation_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_probability_of_precipitation"
            style="@style/CommonTextStyle"/>

        <TextView
            android:id="@+id/tv_probability_of_precipitation_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CommonTextStyle"/>

    </LinearLayout>

</RelativeLayout>